added css white on black

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Commlab JS demo</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p id="greeting-text">hello!</p>
